fix: fix dates borders and calendar layout on mobile

--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -570,7 +570,8 @@ input::-webkit-inner-spin-button {
     padding-bottom: 24px !important;
   }
   .left {
-    @include media-breakpoint-up(md) {
+    padding: 8px !important;
+    @include media-breakpoint-up(sm) {
       padding-left: rem(30) !important;
     }
   }
@@ -579,7 +580,7 @@ input::-webkit-inner-spin-button {
     //   margin-left: rem(-30) !important;
     //   margin-right: 10px;
     // }
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(sm) {
       padding-right: rem(30) !important;
     }
   }
@@ -593,6 +594,9 @@ input::-webkit-inner-spin-button {
   }
   /* head */
   // , select:focus-visible
+  .monthselect {
+      margin: 0 !important;
+    }
   select {
     border: none;
     border-radius: none;
@@ -600,6 +604,7 @@ input::-webkit-inner-spin-button {
     position: relative;
     color: $body-color;
     font-weight: 600;
+    width: auto !important;
     // -webkit-user-select: none;
     // -moz-user-select: -moz-none;
     // -ms-user-select: none;
@@ -608,14 +613,14 @@ input::-webkit-inner-spin-button {
     -moz-appearance: none;
     appearance: none;
     background: none;
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(md) {
       background-image: url("data:image/svg+xml,%3Csvg width='28' height='40' viewBox='0 0 28 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 28.5L7.0718 16.5L20.9282 16.5L14 28.5Z' fill='%23663398'/%3E%3C/svg%3E%0A");
       background-repeat: no-repeat;
       background-position: right;
       background-size: contain;
       vertical-align: middle;
+      width: 51% !important;
     }
-    
     &:focus {
       outline: none;
     }
@@ -639,9 +644,12 @@ input::-webkit-inner-spin-button {
       // max-width: rem(50) !important;
       text-align: center;
     }
+    
     .monthselect div {
       text-align: end !important;
-      margin-left: auto;
+      @include media-breakpoint-up(md) {
+        margin-left: auto;
+      }
     }
     option {
       text-align: center !important;
@@ -694,20 +702,20 @@ input::-webkit-inner-spin-button {
     font-size: rem(18) !important;
     min-width: rem(49) !important;
     width: rem(49) !important;
-    height: rem(48) !important;
+    height: rem(55) !important;
     @include media-breakpoint-up(md) {
       min-width: rem(49) !important;
       width: rem(49) !important;
       height: rem(48) !important;
     }
   }
-  td.start-date {
+  td.start-date, td:first-child {
     border-radius: 50% 0 0 50% !important;
     &:hover {
       background: $primary;
     }
   }
-  td.end-date {
+  td.end-date, td:last-child {
     border-radius: 0 50% 50% 0 !important;
   }
   td.available:hover:not(.start-date) {
@@ -749,8 +757,14 @@ input::-webkit-inner-spin-button {
   }
 }
 .daterangepicker select.yearselect {
-  width: rem(90);
+  @include media-breakpoint-up(md) {
+    width: rem(90) !important;
+  }
 }
-.daterangepicker select.monthselect {
-  text-align: end !important;
+// .daterangepicker select.monthselect {
+//   text-align: end !important;
+// }
+
+.daterangepicker td.start-date.end-date {
+  border-radius: 50% !important;
 }
